--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -95,9 +95,9 @@
 						<h3>Codebase cont.</h3>
 
 						<p><span style="color:#17ff2e">SMW 2.5-alpha</span> – <a href="https://github.com/SemanticMediaWiki/SemanticMediaWiki/issues/107">4032</a> integration tests</p>
-						<p class="fragment"><span style="color:#17ff2e">SMW 2.4</span> – 3685 integration tests</a></p>
+						<p class="fragment"><span style="color:#17ff2e">SMW 2.4</span> – 3685 integration tests</p>
 						<p class="fragment">
-							<img src="img/tests_graph.png" alt="Tests 2015/2016">
+							<img src="img/tests_graph.png" alt="Tests 2015/2016" style="width: 75%; height: 75%"/>
 						</p>
 
 						<p class="fragment">up from <span style="color:#b9ffc0;font-size:90%;">3113</span> last year (SMW 2.3)</p>
@@ -106,7 +106,7 @@
 					<section>
 						<h3>Codebase cont.</h3>
 
-						<p><span style="color:#17ff2e">A lot of different environments get tested continuously</span></p>
+						<p><span style="color:#17ff2e">A lot of different environments get tested continuously.</span></p>
 					
 						<p class="fragment">
 							<img src="img/tests_pic.png" alt="Travis integration tests">
