Added slide background

--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -319,7 +319,7 @@
 						<!--&lt;!&ndash; TODO: add cat &ndash;&gt;-->
 					<!--</section>-->
 
-					<section>
+					<section data-background="#006650" data-transition="linear" data-background-transition="slide">
 						<h3><span class="shadow">Contributing to the project</span></h3>
 
 						<ul style="font-size: 48px">
