Improve cat factor

--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -313,27 +313,31 @@
 				</section>
 
 				<section>
-					<!--<section data-background="#006650" data-transition="linear" data-background-transition="slide">-->
-						<!---->
-
-						<!--&lt;!&ndash; TODO: add cat &ndash;&gt;-->
-					<!--</section>-->
+					<section data-background-video="img/wingtsun.webm">
+						<h3><span class="shadow">Contributing to the project</span></h3>
+						<br />
+						<br />
+						<br />
+						<br />
+						<br />
+						<br />
+						<br />
+						<br />
+						<br />
+						<br />
+					</section>
 
 					<section data-background="#006650" data-transition="linear" data-background-transition="slide">
-						<h3><span class="shadow">Contributing to the project</span></h3>
+						<p class="fragment shadow">Create feature requests</p>
+						<p class="fragment shadow">File bugs you encounter</p>
+						<p class="fragment shadow">Become part of the testers group</p>
+						<p class="fragment shadow">Add or enhance documentation</p>
+						<p class="fragment shadow">Add or enhance translations</p>
+						<p class="fragment shadow">Answer questions and participate in discussions</p>
+						<p class="fragment shadow">Code review</p>
+						<p class="fragment shadow">Contribute code (correctly)</p>
 
-						<ul style="font-size: 48px">
-							<li class="fragment shadow">Create feature requests</li>
-							<li class="fragment shadow">File bugs you encounter</li>
-							<li class="fragment shadow">Become part of the testers group</li>
-							<li class="fragment shadow">Add or enhance documentation</li>
-							<li class="fragment shadow">Add or enhance translations</li>
-							<li class="fragment shadow">Answer questions and participate in discussions</li>
-							<li class="fragment shadow">Code review</li>
-							<li class="fragment shadow">Contribute code (correctly)</li>
-						</ul>
-
-						<p class="fragment shadow"><br />Small and simple contributions are much appreciated</p>
+						<aside class="notes">Small and simple contributions are much appreciated</aside>
 					</section>
 				</section>
 
