Cause we need a b5 ref

--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -33,6 +33,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+				<section>
+					<img src="img/and-so-it-begins.gif" alt="Y U NO LOAD" />
+				</section>
 
 				<section data-background="img/bunnies.jpg">
 					<h3><span class="shadow">Yearly Semantic MediaWiki overview</span></h3>
