Added some real fluff to the first slide

--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -34,7 +34,7 @@
 		<div class="reveal">
 			<div class="slides">
 
-				<section>
+				<section data-background="img/bunnies.jpg">
 					<h3><span class="shadow">Yearly Semantic MediaWiki overview</span></h3>
 					<br />
 					<p class="shadow">
