--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -169,6 +169,14 @@
 				</section>
 
 				<section>
+
+					<section>
+						<h3><span class="shadow">SMW 2.4</span></h3>
+
+							<p class="fragment">This was quite a big realease.</p>
+
+					</section>
+
 					<section>
 						<h3><span style="color: #17ff2e">Language support features</span></h3>
 
