Fixed invalid HTML

--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -225,24 +225,22 @@
 					<section>
 						<h3><span style="color: #17ff2e">Various other features cont.</span></h3>
 
-							<p class="fragment" style="text-align: left">Enhanced date, time and number display formatting<br />
-								<ul>
-									<li class="fragment" style="font-size: 90%">#LOCL formatter (predefined language specific formatting)</li>
-									<li class="fragment" style="font-size: 90%">#-F[...] formatter (individual free formatting) as in<br />|?Has date#-F[F j, Y]</li>
-									<li class="fragment" style="font-size: 90%">Possibility to specify display precision for numeric values (decimals) as in<br />|?Has number#-p2</li>
-								</ul>
-							</p>
+							<p class="fragment" style="text-align: left">Enhanced date, time and number display formatting<br /></p>
+							<ul>
+								<li class="fragment" style="font-size: 90%">#LOCL formatter (predefined language specific formatting)</li>
+								<li class="fragment" style="font-size: 90%">#-F[...] formatter (individual free formatting) as in<br />|?Has date#-F[F j, Y]</li>
+								<li class="fragment" style="font-size: 90%">Possibility to specify display precision for numeric values (decimals) as in<br />|?Has number#-p2</li>
+							</ul>
 					</section>
 
 					<section>
 						<h3><span style="color: #17ff2e">Various other features cont.</span></h3>
 
-							<p class="fragment" style="text-align: left">Improved selection of pages
-								<ul>
-									<li class="fragment" style="font-size: 90%">Comparator support for single value queries (&sim; and !&sim;) as in<br />{{#ask: [[&sim;Foo/*]] ... }}</li>
-									<li class="fragment" style="font-size: 90%">Range query support (&gt; and &lt;) as in<br />{{#ask: [[&gt; AAA]] [[&lt;AAD]] ... }}</li>
-								</ul>
-							</p>
+							<p class="fragment" style="text-align: left">Improved selection of pages</p>
+							<ul>
+								<li class="fragment" style="font-size: 90%">Comparator support for single value queries (&sim; and !&sim;) as in<br />{{#ask: [[&sim;Foo/*]] ... }}</li>
+								<li class="fragment" style="font-size: 90%">Range query support (&gt; and &lt;) as in<br />{{#ask: [[&gt; AAA]] [[&lt;AAD]] ... }}</li>
+							</ul>
 					</section>
 
 					<section>
@@ -250,14 +248,13 @@
 
 							<p class="fragment" style="text-align: left">Improved handling of outdated entities (plays with "rebuildData.php" --shallow-update parameter)</p>
 
-							<p class="fragment" style="text-align: left">More parameters to the "rebuildData.php" script:<br />
-								<ul>
-									<li class="fragment" style="font-size: 90%">--ignore-exceptions</li>
-									<li class="fragment" style="font-size: 90%">--exception-log="/path/to/smw/logs/directory/"</li>
-									<li class="fragment" style="font-size: 90%">--with-maintenance-log</li>
-									<li class="fragment" style="font-size: 90%">--redirects</li>
-								</ul>
-							</p>
+							<p class="fragment" style="text-align: left">More parameters to the "rebuildData.php" script:<br /></p>
+							<ul>
+								<li class="fragment" style="font-size: 90%">--ignore-exceptions</li>
+								<li class="fragment" style="font-size: 90%">--exception-log="/path/to/smw/logs/directory/"</li>
+								<li class="fragment" style="font-size: 90%">--with-maintenance-log</li>
+								<li class="fragment" style="font-size: 90%">--redirects</li>
+							</ul>
 					</section>
 
 					<section data-background="#005555">
